--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,63 @@
+body {
+	font-family: Helvetica, Arial, Sans-serif;
+}
+
+h2 {
+	font-size: 35px;
+	text-align: center;
+	padding: 10px;
+}
+
+h3 {
+	font-size: 30px;
+	margin-left: 10%;
+	width: 80%;
+}
+
 div {
 	padding-top: 20px;
+}
+
+#showcase {
+	background-color: #F9F9F9;
+	width: 100%;
+	min-width: 0px;
+	border-style: solid;
+	border-radius: 3px;
+	border-width: 1px;
+	border-color: grey;
+}
+
+#search {
+	width: 100%;
+	height: 40px;
+	font-size: 30px;
+}
+
+.roundbtn {
+	border-radius: 100px;
+	height: 50px;
+	width: 50px;
+	color: white;
+	background-color: crimson;
+}
+
+button {
+	border-radius: 2px;
+	padding: 10px;
+	margin: 10px;
+	font-size: 20px;
+	border-style: hidden;
+	color: white;
+	margin-left: 20px;
+	background-color: steelblue;
+}
+
+button:focus {
+	outline: none;
+}
+
+button:active {
+	background-color: grey;
+	color: white;
 }
